@@ -3901,39 +3901,47 @@ cb_expr_finish (void)
 cb_tree
 cb_build_expr (cb_tree list)
 {
-	cb_tree	l;
-	int	op;
+	cb_tree	l, v;
+	struct cb_field	*f;
+	int	op, has_rel, has_con, has_var, bad_cond;
 
 	cb_expr_init ();
 
 	/* Checkme: maybe add validate_list(l) here */
 
+	bad_cond = has_rel = has_con = has_var = 0;
 	for (l = list; l; l = CB_CHAIN (l)) {
 		op = CB_PURPOSE_INT (l);
 		switch (op) {
 		case '9':
 			/* NUMERIC */
 			cb_expr_shift_class ("cob_is_numeric");
+			has_rel = 1;
 			break;
 		case 'A':
 			/* ALPHABETIC */
 			cb_expr_shift_class ("cob_is_alpha");
+			has_rel = 1;
 			break;
 		case 'L':
 			/* ALPHABETIC_LOWER */
 			cb_expr_shift_class ("cob_is_lower");
+			has_rel = 1;
 			break;
 		case 'U':
 			/* ALPHABETIC_UPPER */
 			cb_expr_shift_class ("cob_is_upper");
+			has_rel = 1;
 			break;
 		case 'P':
 			/* POSITIVE */
 			cb_expr_shift_sign ('>');
+			has_rel = 1;
 			break;
 		case 'N':
 			/* NEGATIVE */
 			cb_expr_shift_sign ('<');
+			has_rel = 1;
 			break;
 		case 'O':
 			/* OMITTED */
@@ -3941,16 +3949,56 @@ cb_build_expr (cb_tree list)
 				current_statement->null_check = NULL;
 			}
 			cb_expr_shift_class ("cob_is_omitted");
+			has_rel = 1;
 			break;
 		case 'C':
 			/* CLASS */
 			cb_expr_shift_class (CB_CLASS_NAME (cb_ref (CB_VALUE (l)))->cname);
+			has_rel = 1;
 			break;
 		default:
+			 if (op == 'x') {
+				has_var = 1;
+				v = CB_VALUE (l);
+				if (CB_TREE_TAG (v) == CB_TAG_BINARY_OP) {
+					has_rel = 1;
+				} else
+				if (CB_TREE_TAG (v) == CB_TAG_FUNCALL) {
+					has_rel = 1;
+				} else
+				if (CB_REF_OR_FIELD_P (v)) {
+					f = CB_FIELD_PTR (v);
+					if (f->level == 88) {
+						has_rel = 1;
+					} else
+					if (f->storage == CB_STORAGE_CONSTANT) {
+						has_rel = 1;
+					}
+				}
+			 } else
+			 if (op == '|' 
+			  || op == '&') {
+				has_con = 1;
+				if (has_var && !has_rel) {
+					bad_cond = 1;
+				}
+			 } else 
+			 if (op == '>' 
+			  || op == '<'
+			  || op == '='
+			  || op == '~'
+			  || op == '['
+			  || op == ']') {
+				has_rel = 1;
+			 } else 
+			 if (op == '!') {
+				has_rel = 1;
+			 }
 			/* Warning for complex expressions without explicit parentheses
 			   (i.e., "a OR b AND c" or "a AND b OR c") */
 			if (cb_warn_parentheses
-			 && expr_index > 3) {
+			 && expr_index > 3
+			 && (op == '|' || op == '&')) {
 				cb_tree e = cb_any;
 				e->source_line = cb_exp_line;
 				e->source_file = cb_source_file;
@@ -3967,6 +4015,10 @@ cb_build_expr (cb_tree list)
 			cb_expr_shift (op, CB_VALUE (l));
 			break;
 		}
+	}
+	if (bad_cond) {
+		cb_error_x (list, _("invalid conditional expression"));
+		return cb_any;
 	}
 
 	return cb_expr_finish ();
